--- a/config/abomination.conf
+++ b/config/abomination.conf
@@ -3,13 +3,13 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
 # Uncomment the following line to enable display
 CONFIG_ZMK_DISPLAY=y
-CONFIG_LV_USE_THEME_MONO=y
-CONFIG_LV_COLOR_TRANSP_CUSTOM=y
-CONFIG_LV_CUSTOM_COLOR_TRANSP_RED=0x00
-CONFIG_LV_CUSTOM_COLOR_TRANSP_GREEN=0x00
-CONFIG_LV_CUSTOM_COLOR_TRANSP_BLUE=0x00
-CONFIG_LV_THEME_DEFAULT_FONT_SMALL_MONTSERRAT_16=y
-CONFIG_LV_THEME_DEFAULT_FONT_NORMAL_MONTSERRAT_26=y
+#CONFIG_LV_USE_THEME_MONO=y
+#CONFIG_LV_COLOR_TRANSP_CUSTOM=y
+#CONFIG_LV_CUSTOM_COLOR_TRANSP_RED=0x00
+#CONFIG_LV_CUSTOM_COLOR_TRANSP_GREEN=0x00
+#CONFIG_LV_CUSTOM_COLOR_TRANSP_BLUE=0x00
+#CONFIG_LV_THEME_DEFAULT_FONT_SMALL_MONTSERRAT_16=y
+#CONFIG_LV_THEME_DEFAULT_FONT_NORMAL_MONTSERRAT_26=y
 
 # Turn on logging, and set ZMK logging to debug output
 # CONFIG_ZMK_USB_LOGGING=y
