Removing built in widget

--- a/config/abomination.conf
+++ b/config/abomination.conf
@@ -3,6 +3,12 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
 # Uncomment the following line to enable display
 CONFIG_ZMK_DISPLAY=y
+
+# To disable the nice!view's built-in widget
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
+CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
+
 #CONFIG_LV_USE_THEME_MONO=y
 #CONFIG_LV_COLOR_TRANSP_CUSTOM=y
 #CONFIG_LV_CUSTOM_COLOR_TRANSP_RED=0x00
