--- a/config/abomination.conf
+++ b/config/abomination.conf
@@ -1,6 +1,9 @@
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
+#boost bluetooth power
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
 # Uncomment the following line to enable display
 CONFIG_ZMK_DISPLAY=y
 
